// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LandmarkMapComponent should render correctly on ready state 1`] = `
<styled.div>
  <styled.div>
    <styled.span
      expand={false}
      onClick={[Function]}
    />
    <div
      onClick={[Function]}
    >
      Dashboard
    </div>
  </styled.div>
  <styled.div>
    <styled.div>
      Email:
    </styled.div>
    <styled.div>
      email
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      Filter:
    </styled.div>
    <styled.input
      onChange={[Function]}
      value=""
    />
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      Apply
    </styled.button>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      &lt;&lt;
    </styled.button>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      &gt;&gt;
    </styled.button>
  </styled.div>
  <styled.div>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      Log Out
    </styled.button>
    <styled.span
      error={false}
    />
  </styled.div>
  <div>
    <styled.div>
      <styled.span
        expand={true}
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        Instructions
      </div>
    </styled.div>
  </div>
</styled.div>
`;

exports[`LandmarkMapComponent should render correctly when there is a status update 1`] = `
<styled.div>
  <styled.div>
    <styled.span
      expand={false}
      onClick={[Function]}
    />
    <div
      onClick={[Function]}
    >
      Dashboard
    </div>
  </styled.div>
  <styled.div>
    <styled.div>
      Email:
    </styled.div>
    <styled.div>
      email
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      Filter:
    </styled.div>
    <styled.input
      onChange={[Function]}
      value=""
    />
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      Apply
    </styled.button>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      &lt;&lt;
    </styled.button>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      &gt;&gt;
    </styled.button>
  </styled.div>
  <styled.div>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      Log Out
    </styled.button>
    <styled.span
      error={false}
    >
      message
    </styled.span>
  </styled.div>
  <div>
    <styled.div>
      <styled.span
        expand={true}
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        Instructions
      </div>
    </styled.div>
  </div>
</styled.div>
`;

exports[`LandmarkMapComponent should render correctly when there is an error 1`] = `
<styled.div>
  <styled.div>
    <styled.span
      expand={false}
      onClick={[Function]}
    />
    <div
      onClick={[Function]}
    >
      Dashboard
    </div>
  </styled.div>
  <styled.div>
    <styled.div>
      Email:
    </styled.div>
    <styled.div>
      email
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      Filter:
    </styled.div>
    <styled.input
      onChange={[Function]}
      value=""
    />
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      Apply
    </styled.button>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      &lt;&lt;
    </styled.button>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      &gt;&gt;
    </styled.button>
  </styled.div>
  <styled.div>
    <styled.button
      disabled={false}
      onClick={[Function]}
    >
      Log Out
    </styled.button>
    <styled.span
      error={true}
      show={true}
    >
      message
    </styled.span>
  </styled.div>
  <div>
    <styled.div>
      <styled.span
        expand={true}
        onClick={[Function]}
      />
      <div
        onClick={[Function]}
      >
        Instructions
      </div>
    </styled.div>
  </div>
</styled.div>
`;
